# assistbelle-arm-elevator-subsystem

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt
LICENSES/: Apache-2.0.txt  CC-BY-4.0.txt  CERN-OHL-S-2.0.txt
docs/: ARQUITECTURA_SOFTWARE.md  ESPECIFICACIONES_ROBOT.md  GUIA_USUARIO.md  README.md  ROBOT_SPECS.md  SOFTWARE_ARCH.md  USER_GUIDE.md  bom_template.csv  calibration_manual.md  hardwarex_master_checklist.md  license_overview.md  operation_manual.md  project_status.md  publication_checklist.md  repo_cleanup_audit.md  repository_audit.md  repository_structure.md  ros2_entrypoints_validation.md  safety_notes.md  todo_2026-06-25.md  troubleshooting.md  worklog_2026-06-24.md
docs/bom/: README.md  hardwarex_elevator_bom_final.csv  hardwarex_elevator_bom_final.md
docs/procurement/: README.md  purchase_log_public.csv  usage_reconciliation.md
electronics/: README.md
electronics/images/: README.md
electronics/pinout_tables/: README.md  esp32_firmware_sources_index.md  esp32_pinout_table.md  raspberry_pi_mcp2515.md
electronics/power_distribution/: README.md  power_summary.md
electronics/schematics/: README.md  schematics_index.md
electronics/wiring_diagrams/: README.md  bus_principal.md  connector_table.md  nodos_controladores.md
firmware/: ESP_IDF_BUILD_GUIDE.md  README.md  import_firmware_from_zips.sh
firmware/can_protocol/: README.md  can_messages.md
firmware/esp32_gripper_node/: README.md
firmware/esp32_joint_node/: README.md  README_drive_sources.md
firmware/esp32_joint_node/J1/: CMakeLists.txt  README.md
firmware/esp32_joint_node/J2/: CMakeLists.txt  README.md
firmware/esp32_joint_node/J3/: CMakeLists.txt  README.md
firmware/esp32_joint_node/J4/: CMakeLists.txt  README.md
firmware/esp32_stepper_node/: README.md  README_drive_sources.md
firmware/esp32_stepper_node/J5_tb6600/: CMakeLists.txt  README.md  sdkconfig
hardware/: README.md  design_files_index.md  design_files_upload_plan.md
hardware/cad/: README.md
hardware/cad/arm/: README.md
hardware/cad/complete_robot/: ASM_Elevator_System_v60.f3z  README.md
hardware/cad/elevator/: README.md
hardware/cad/gripper/: README.md
hardware/cad/mounts/: README.md
hardware/cad/tooling/: README.md
hardware/drawings/: FAB_GUI_001_Gantry_Plate_127x88x3_StainlessSteel_v60.dxf  FAB_STR_002_Top_Plate_420x400x3_StainlessSteel_v60.dxf  README.md
hardware/fasteners/: README.md  structural_profiles_table.csv
hardware/photos/: README.md
hardware/step/: ASM_Elevator_System_v54.step  README.md
hardware/stl/: FAB_ACT_002_NEMA23_Mounting_Plate_ABS_v60.stl  FAB_GUI_002_Spacer_Block_ABS_Gray_v60.stl  README.md
paper/: README.md  data_availability_statement.md  manuscript_outline.md
paper/figures/: README.md  electronics_can_architecture_mermaid.md  mechanical_figure_plan.md  power_distribution_mermaid.md  system_architecture_mermaid.md
paper/references/: README.md
paper/tables/: README.md  bom_summary.md  design_files_summary.md  validation_summary.md
ros2_ws/src/can_comm_pkg/: .gitignore  CMakeLists.txt  README.md  calc_pose4.py  package.xml  robot_dh_viewer.html  setup.cfg  setup.py  setup.py.bak  test_loop_ik.py  traj_data_20251124_181212.csv  verify_can_node.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/apps/: README.md  barcode_detector.py  can_slider.py  can_traj.py  can_traj_offline.py  cinematica_directa.py  cinematica_inversa.py  cli_node.py  control_teclado.py  control_teclado_4gdl.py  control_teclado_record.py  control_teclado_sistemas_separados.py  control_teclado_trapezoidal.py  debug_ax_bx.py  debug_lspb.py  debug_pitch.py  ik_node.py  j1_step_test.py  j2_step_test.py  j3_step_test.py  j4_performance_test.py  loop_coordinate.py  product_identifier.py  sequence_executor.py  test_ik_arm.py  visualize_dh.py  visualize_sequence.py  viz_node.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/apps/test/: generate_tests.py  test_lib.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/apps/test/articular/ramp/: j1.py  j2.py  j3.py  j4.py  j5.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/apps/test/articular/step/: j1.py  j2.py  j3.py  j4.py  j5.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/apps/test/articular/trap/: j1.py  j2.py  j3.py  j4.py  j5.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/core/: README.md  can_node.py  driver.py  message.py
ros2_ws/src/can_comm_pkg/can_comm_pkg/utils/: ik.py
ros2_ws/src/can_comm_pkg/docs/: NODES.md  TESTING.md
ros2_ws/src/can_comm_pkg/launch/: rviz_sim.launch.py
ros2_ws/src/can_comm_pkg/rviz/: config.rviz
ros2_ws/src/can_comm_pkg/scripts/: can_menu.py
ros2_ws/src/can_comm_pkg/test/: test_driver_physical.py  test_receive.py
ros2_ws/src/can_comm_pkg/tools/: dh_inspector.py
ros2_ws/src/can_comm_pkg/urdf/: robot.urdf
ros2_ws/src/cpp_robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_robot_control/src/joint_state_listener/: joint_state_listener.cpp  joint_state_listener.hpp  main.cpp
ros2_ws/src/cpp_robot_control/src/joint_trajectory_controller/: joint_trajectory_controller.cpp  joint_trajectory_controller.hpp  main.cpp
ros2_ws/src/cpp_video_streamer/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_video_streamer/src/: gst_opencv_test.cpp  gst_video_streamer.cpp  testcpp.cpp
ros2_ws/src/video_streamer/: package.xml  setup.py
ros2_ws/src/video_streamer/video_streamer/: video_publisher.py  video_subscriber.py
software/: README.md
software/helper_scripts/: README.md
software/installation/: README.md
validation/: README.md  validation_data_index.md  validation_plan.md
validation/figures/: README.md
validation/joint_motion_tests/: README.md  j5_motion_summary.csv
validation/joint_motion_tests/raw/: j1_ramp_30.0deg_5reps.csv  j1_ramp_30.0deg_5reps_robot_tracker.txt  j1_step_30.0deg_5reps.csv  j1_step_30.0deg_5reps_robot_trk.txt  j1_trap_30.0deg_5reps.csv  j1_trap_30.0deg_5reps_robot_tracker.txt  (+23 more)
validation/kinematics_tests/: README.md
validation/media/: README.md  media_index.md
validation/perception_tests/: README.md
validation/pick_and_place_tests/: README.md  pick_and_place_summary.csv
(+52 files in other folders)
