<?xml version="1.0"?>
<package format="3">
  <name>can_comm_pkg</name>
  <version>0.1.0</version>
  <description>CAN communication package for Raspberry Pi and motors</description>

  <maintainer email="tu_email@ejemplo.com">Yuri Fabian Vilela Obando</maintainer>
  <license>Apache-2.0</license>

  <!-- Paquete Python (ament_python) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
