[develop]
script_dir=$base/lib/can_comm_pkg
[install]
install_scripts=$base/lib/can_comm_pkg

[metadata]
name = can-comm-pkg
version = 0.1.0
description = CAN communication package (ROS 2)
license = Apache-2.0

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    sensor_msgs
    numpy
    matplotlib

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    can_node = can_comm_pkg.ros_node:main
    can_cli = can_comm_pkg.cli_node:main
    can_slider = can_comm_pkg.can_slider:main
