<?xml version="1.0"?>
<package format="3">
  <name>cpp_robot_control</name>
  <version>0.1.0</version>
  <description>C++ kinematic-control utilities for the Assistbelle robot.</description>
  <maintainer email="luciano.vergani@utec.edu.pe">Luciano Vergani</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>opencv4</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
