<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_video_streamer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fabian.vilela268@gmail.com">rosario</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- test.cpp deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- gst_video_streamer deps -->
  <depend>gstreamer1.0</depend>
  <!-- Opencv gstreamer test deps -->
  <depend>opencv4</depend>
</package>
