<?xml version="1.0"?>
<package format="3">
  <name>cpp_video_streamer</name>
  <version>0.1.0</version>
  <description>C++ video streaming experiments and utilities for the Assistbelle project.</description>
  <maintainer email="yuri.vilela@utec.edu.pe">Yuri Fabian Vilela Obando</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gstreamer1.0</depend>
  <depend>opencv4</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
