<?xml version="1.0"?>
<package format="3">
  <name>video_streamer</name>
  <version>0.1.0</version>
  <description>ROS 2 video streaming utilities for the Assistbelle project.</description>
  <maintainer email="yuri.vilela@utec.edu.pe">Yuri Fabian Vilela Obando</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
